# FYP-enhancing-churn-prediction-with-slm-and-llm

./: .dvcignore  .env.sample  .gitattributes  .gitignore  README.md  data.dvc  environment.yml  pyproject.toml
.dvc/: config
data/: csv.dvc
data/output/: correlation_analysis_results.csv  human_evaluation_results.csv  human_evaluation_samples.txt  human_vs_llm_comparison.csv
docker/: docker-compose.cpu.yml  docker-compose.yml
docker/services/litellm/: litellm-config.yaml
docker/services/sbert-embedding/: Dockerfile.cpu  entrypoint.sh  main.py  requirements.txt
models/: llm_embedding_xgb_model.pkl
notebook/base_model_without_textual_data/: 01-customer-churn.ipynb
notebook/modeling/: 01_bimodal_model_with_llm_embedding.ipynb  02_shap_explanations.ipynb  03_prepare_data_for_human_evaluation.ipynb  03_prepare_human_evaluation.ipynb  04_comparison_between_llm_and_human.ipynb  llm_evaluation_app.py
notebook/modeling/utils/: prepare_synthentic_data.py
notebook/text-representation/: 01_bimodal_model_with_llm_embedding.ipynb  01_hybrid_model_with_llm_embedding.ipynb  02_hybrid_model_with_llm_embedding.ipynb  README.md
notebook/text-representation/utils/: prepare_llm_prompt.py
src/data_simulation/: prepare_judge.py  prepare_raw.py  prepare_synthesis.py  prepare_synthetic_feedback.py
src/embedding/: prepare_distil_sbert_embedding.py  prepare_llm_embedding.py  prepare_sbert_embedding.py
utils/: hf_data_sync.py
