[project]
name = "fyp-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "dvc>=3.60.1",
    "gradio>=5.44.1",
    "httpx==0.27.2",
    "huggingface-hub>=0.33.0",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "krippendorff>=0.8.1",
    "langchain==0.1.4",
    "langchain-openai==0.0.5",
    "llmx>=0.0.21a0",
    "matplotlib>=3.10.3",
    "openai==1.55.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "shap>=0.48.0",
    "typing-extensions==4.14.0",
    "umap-learn>=0.5.7",
    "xgboost>=3.0.2",
]
